--- a/gogn/scss/variables.scss
+++ b/gogn/scss/variables.scss
@@ -2,3 +2,6 @@
   // margföldum með "1%" til að breyta gildi í prósentu gildi
   width: ($col / 12 * 100) * 1%;
 }
+
+$max-width: 1200px;
+$gutter: 20px;
