--- a/gogn/scss/grid.scss
+++ b/gogn/scss/grid.scss
@@ -18,11 +18,15 @@
 
   &-12 {
     @include columns(12);
-    }
+  }
+
+  &-8 {
+    @include columns(8);
+  }
 
   &-6 {
     @include columns(6);
-    }
+  }
 
   &-4 {
     @include columns(4);
