--- a/gogn/styles.css
+++ b/gogn/styles.css
@@ -1,6 +1,36 @@
-.profile {
-  overflow: hidden;
-  border-radius: 50%; }
+@charset "UTF-8";
+/* setjum box-sizing: border-box; á allt */
+html {
+  /* stylelint-disable-line */
+  box-sizing: border-box; }
+
+*, *:before, *:after {
+  /* stylelint-disable-line */
+  box-sizing: inherit;
+  /* fjarlægjum margin og padding */
+  padding: 0;
+  margin: 0; }
+
+html {
+  /* stylelint-disable-line */
+  margin-right: 20px;
+  margin-left: 20px;
+  font-family: Lato, helvetica, arial, sans-serif;
+  font-size: 16px;
+  line-height: 1.5; }
+  @media (min-width: 1200px) {
+    html {
+      margin: 0; } }
+
+img {
+  /* stylelint-disable-line */
+  max-width: 100%; }
+
+main {
+  /* stylelint-disable-line */
+  max-width: 1200px;
+  margin: 0 auto;
+  overflow-x: hidden; }
 
 .row {
   display: flex;
@@ -14,19 +44,33 @@
   padding-left: 10px; }
   .col-12 {
     width: 100%; }
+  .col-8 {
+    width: 66.66667%; }
   .col-6 {
     width: 50%; }
   .col-4 {
     width: 33.33333%; }
 
-.image {
-  width: 50%; }
-
-.checkbox {
-  max-width: 20px;
-  width: 100%;
-  height: 100%; }
-
-.comment {
-  display: inline-flex;
+.desc {
   margin-bottom: 20px; }
+  .desc-image {
+    width: 20px; }
+  .desc-text {
+    font-size: 0.75rem; }
+
+.comment-img {
+  border-radius: 50%;
+  overflow: hidden; }
+
+.comment-content {
+  text-align: center; }
+
+.comment-text {
+  font-style: italic; }
+
+.comment-author {
+  font-size: 75%; }
+
+.comment-about {
+  font-size: 60%;
+  color: #777; }
