--- a/gogn/styles.css
+++ b/gogn/styles.css
@@ -56,10 +56,12 @@ section {
     width: 33.33333%; }
 
 .desc {
-  margin-bottom: 20px;
   display: inline-flex; }
   .desc-image {
-    width: 20px; }
+    width: 20px;
+    height: 20px; }
+  .desc-img {
+    height: 100%; }
   .desc-text {
     font-size: 0.75rem; }
 
